--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "expo-web-browser": "~14.2.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
